# arrabbiata

./: .gitmodules  CMakeLists.txt
res/shaders/sprite/: sprite.fs  sprite.vs  varying.def.sc
src/: global.hpp  main.cpp  main.hpp
src/_compiled/shaders/sprite/: sprite.fs.hpp  sprite.vs.hpp
src/atlas/: atlas.cpp  atlas.hpp
src/camera/: camera.cpp  camera.hpp
src/gfx/: renderer.cpp  renderer.hpp  vertex.hpp
src/input/: input.cpp  input.hpp
src/platform/: platform.cpp  platform.hpp
src/resource_loader/: resource_loader.cpp  resource_loader.hpp
src/time/: time.cpp  time.hpp
